# stm32n647-template

./: .gitignore  LOCAL_SETUP.md  README.md  SDMMC_SD_TEST.md
app/: CMakeLists.txt
app/AI/Inc/: app_config.h  app_postprocess.h  sort.h
app/AI/Model/: network.c  network.h  network_ecblobs.h  stai_network.c  stai_network.h
app/AI/Src/: app_postprocess.c
app/Core/Inc/: FreeRTOSConfig.h  partition_stm32n647xx.h  sd_test.h  serial_console.h  shell_port_cfg.h  stm32n6xx_hal.h  stm32n6xx_hal_conf.h  stm32n6xx_hal_def.h  stm32n6xx_it.h
app/Core/Inc/app/: ai_instance_segmentation.h  app_tasks.h
app/Core/Inc/console/: shell_port.h
app/Core/Inc/drivers/: board_init.h  camera_demo.h  imx415.h  rgb_lcd.h  sdmmc_drv.h  sdmmc_test.h
app/Core/Inc/shell_cmds/: camera_shell.h  sdmmc_cmd.h
app/Core/Inc/system/: stm32n6xx_it.h
app/Core/Src/: main.c  sd_test.c  stm32n6xx_it.c
app/Core/Src/app/: ai_instance_segmentation.c  app_tasks.c  main.c
app/Core/Src/console/: serial_console.c  shell_port.c
app/Core/Src/drivers/: board_init.c  camera_demo.c  imx415.c  rgb_lcd.c  sdmmc_drv.c  sdmmc_test.c
app/Core/Src/shell_cmds/: camera_shell.c  sdmmc_cmd.c
app/Core/Src/system/: freertos_hooks.c  hal_shim.c  secure_nsc.c
app/Middlewares/AI/Inc/: core_datatypes.h  stai.h
app/Middlewares/AI/Misc/Src/: aiTestHelper_ST_AI.c  aiTestUtility.c
app/Middlewares/AI/Npu/ll_aton/: ll_aton_platform.h  ll_aton_runtime.c  ll_aton_version.h  ll_sw_float.c
app/Middlewares/AI/Validation/Inc/: aiPbMgr.h  ai_io_buffers_ATON.h  ai_wrapper_ATON.h
app/Middlewares/AI/Validation/Src/: aiPbMemRWServices.c  aiPbMgr.c  aiValidation.c  aiValidation_ATON.c  aiValidation_ATON_ST_AI.c  aiValidation_RELOC.c  aiValidation_ST_AI.c  aiValidation_TFLM.c  ai_io_buffers_ATON.c  ai_wrapper_ATON.c  ai_wrapper_ATON_ST_AI.c
app/Middlewares/FreeRTOS-Kernel/: tasks.c
app/Middlewares/lwrb/src/lwrb/: lwrb.c
app/Secure_nsclib/: secure_nsc.h
app/ld/: STM32N647X0HXQ_LRUN_RAMxspi1.ld  STM32N647X0HXQ_ROMxspi2.ld
docs/: fsbl-app-handoff.md  sd-hal-apis.md  sd-interface.md  sd-thread-safety.md
fsbl/: CMakeLists.txt
fsbl/Core/Inc/: stm32n6xx_it.h
fsbl/Core/Src/: main.c  stm32n6xx_it.c  syscalls.c
fsbl/Drivers/BSP/HyperRAM/: hyperram.c  hyperram.h
fsbl/Drivers/BSP/NORFlash/: norflash.c  norflash.h
fsbl/Drivers/STM32N6xx_HAL_Driver/Inc/: stm32n6xx_ll_xspi.h
fsbl/Drivers/STM32N6xx_HAL_Driver/Src/: stm32n6xx_ll_xspi.c
fsbl/Middlewares/STM32_ExtMem_Manager/boot/: stm32_boot_xip.c  stm32_boot_xip.h
fsbl/ld/: STM32N647X0HXQ_AXISRAM2_fsbl.ld
scripts/: boot-app-via-ram-fsbl.sh  flash-app.sh
tools/AI/: neuralart_n647.json  stm32n647.mpool
